Fix typo in fieldref

--- a/deckhand-poc-ascrd/base/kustomizeconfig/ArmadaChart.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/ArmadaChart.yaml
@@ -13,7 +13,511 @@ namePrefix:
 #     kind: ArmadaChart
 
 varReference:
-- path: spec/chart/values/tls/certificate
-  kind: ArmadaChart
-- path: spec/chart/values/tls/key
-  kind: ArmadaChart
+- kind: ArmadaChart
+  path: spec/source
+- kind: ArmadaChart
+  path: spec/values/anchor/etcdctl_endpoint
+- kind: ArmadaChart
+  path: spec/values/command_prefix/_1_
+- kind: ArmadaChart
+  path: spec/values/command_prefix/_2_
+- kind: ArmadaChart
+  path: spec/values/conf/anchor/kubernetes_url
+- kind: ArmadaChart
+  path: spec/values/conf/ceph/global/fsid
+- kind: ArmadaChart
+  path: spec/values/conf/controllers/K8S_API
+- kind: ArmadaChart
+  path: spec/values/conf/coredns/corefile
+- kind: ArmadaChart
+  path: spec/values/conf/drydock/bootaction_url
+- kind: ArmadaChart
+  path: spec/values/conf/drydock/maasdriver/maas_api_url
+- kind: ArmadaChart
+  path: spec/values/conf/ldap/config/base_dns/group_search
+- kind: ArmadaChart
+  path: spec/values/conf/ldap/config/base_dns/search
+- kind: ArmadaChart
+  path: spec/values/conf/ldap/config/filters/group_search
+- kind: ArmadaChart
+  path: spec/values/conf/maas/dns/dns_servers
+- kind: ArmadaChart
+  path: spec/values/conf/maas/ntp/ntp_servers
+- kind: ArmadaChart
+  path: spec/values/conf/maas/url/maas_url
+- kind: ArmadaChart
+  path: spec/values/conf/node/IP_AUTODETECTION_METHOD
+- kind: ArmadaChart
+  path: spec/values/conf/uamlite/users/_0_/user_crypt_passwd
+- kind: ArmadaChart
+  path: spec/values/conf/uamlite/users/_0_/user_sshkeys/_0_
+- kind: ArmadaChart
+  path: spec/values/endpoints/alerts
+- kind: ArmadaChart
+  path: spec/values/endpoints/armada
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_mgr
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_mon
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/admin/access_key
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/admin/secret_key
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/elasticsearch
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/elasticsearch/access_key
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/elasticsearch/secret_key
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/glance
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/glance/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/ceph_object_store/auth/glance/tmpurlkey
+- kind: ArmadaChart
+  path: spec/values/endpoints/cloudformation
+- kind: ArmadaChart
+  path: spec/values/endpoints/cloudwatch
+- kind: ArmadaChart
+  path: spec/values/endpoints/compute
+- kind: ArmadaChart
+  path: spec/values/endpoints/compute_metadata
+- kind: ArmadaChart
+  path: spec/values/endpoints/compute_novnc_proxy
+- kind: ArmadaChart
+  path: spec/values/endpoints/compute_spice_proxy
+- kind: ArmadaChart
+  path: spec/values/endpoints/dashboard
+- kind: ArmadaChart
+  path: spec/values/endpoints/deckhand
+- kind: ArmadaChart
+  path: spec/values/endpoints/elasticsearch
+- kind: ArmadaChart
+  path: spec/values/endpoints/elasticsearch/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/elasticsearch/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/etcd/auth/client/tls/ca
+- kind: ArmadaChart
+  path: spec/values/endpoints/etcd/auth/client/tls/crt
+- kind: ArmadaChart
+  path: spec/values/endpoints/etcd/auth/client/tls/key
+- kind: ArmadaChart
+  path: spec/values/endpoints/etcd/host_fqdn_override/default
+- kind: ArmadaChart
+  path: spec/values/endpoints/fluentd
+- kind: ArmadaChart
+  path: spec/values/endpoints/grafana
+- kind: ArmadaChart
+  path: spec/values/endpoints/grafana/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/grafana/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/barbican
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/barbican/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/cinder
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/cinder/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/drydock
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/drydock/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/glance
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/glance/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/heat
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/heat/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/heat_stack_user
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/heat_stack_user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/heat_trustee
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/heat_trustee/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/neutron
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/neutron/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/nova
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/nova/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/placement
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/placement/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/shipyard
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/shipyard/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/swift
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/swift/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/identity/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/image
+- kind: ArmadaChart
+  path: spec/values/endpoints/image_registry
+- kind: ArmadaChart
+  path: spec/values/endpoints/key_manager
+- kind: ArmadaChart
+  path: spec/values/endpoints/kibana
+- kind: ArmadaChart
+  path: spec/values/endpoints/kube_controller_manager
+- kind: ArmadaChart
+  path: spec/values/endpoints/kube_scheduler
+- kind: ArmadaChart
+  path: spec/values/endpoints/kube_state_metrics
+- kind: ArmadaChart
+  path: spec/values/endpoints/kubernetesprovisioner
+- kind: ArmadaChart
+  path: spec/values/endpoints/ldap
+- kind: ArmadaChart
+  path: spec/values/endpoints/ldap/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/ldap/auth/admin/bind_dn
+- kind: ArmadaChart
+  path: spec/values/endpoints/ldap/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_db
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_db/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_db/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_db/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_db/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_db/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_region_ui
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_region_ui/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/maas_region_ui/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/monitoring
+- kind: ArmadaChart
+  path: spec/values/endpoints/monitoring/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/monitoring/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/monitoring/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/monitoring/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/nagios
+- kind: ArmadaChart
+  path: spec/values/endpoints/nagios/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/nagios/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/network
+- kind: ArmadaChart
+  path: spec/values/endpoints/node_metrics
+- kind: ArmadaChart
+  path: spec/values/endpoints/object_store
+- kind: ArmadaChart
+  path: spec/values/endpoints/object_store/auth/glance/tmpurlkey
+- kind: ArmadaChart
+  path: spec/values/endpoints/orchestration
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_cache
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_cache/auth/memcache_secret_key
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/barbican
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/barbican/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/cinder
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/cinder/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/exporter/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/glance
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/glance/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/heat
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/heat/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/horizon
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/keystone
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/keystone/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/neutron
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/neutron/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/nova/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/nova/username
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_api
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_api/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_api/auth/nova
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_api/auth/nova/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_api/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_cell0
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_cell0/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_cell0/auth/nova
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_cell0/auth/nova/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_cell0/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_session
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_session/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_session/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_session/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_db_session/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/barbican/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/cinder
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/cinder/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/erlang_cookie
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/glance
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/glance/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/heat
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/heat/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/keystone
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/keystone/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/neutron
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/neutron/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/nova
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/nova/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/oslo_messaging/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/physicalprovisioner
+- kind: ArmadaChart
+  path: spec/values/endpoints/physicalprovisioner/port/api/nodeport
+- kind: ArmadaChart
+  path: spec/values/endpoints/placement
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_celery_db
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_celery_db/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_celery_db/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_celery_db/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_celery_db/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_celery_db/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_db
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_db/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_db/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_db/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_db/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_airflow_db/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_shipyard_db
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_shipyard_db/auth/admin
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_shipyard_db/auth/admin/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_shipyard_db/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_shipyard_db/auth/user/password
+- kind: ArmadaChart
+  path: spec/values/endpoints/postgresql_shipyard_db/path
+- kind: ArmadaChart
+  path: spec/values/endpoints/process_exporter_metrics
+- kind: ArmadaChart
+  path: spec/values/endpoints/prometheus_elasticsearch_exporter
+- kind: ArmadaChart
+  path: spec/values/endpoints/prometheus_fluentd_exporter
+- kind: ArmadaChart
+  path: spec/values/endpoints/prometheus_mysql_exporter
+- kind: ArmadaChart
+  path: spec/values/endpoints/prometheus_mysql_exporter/auth/user
+- kind: ArmadaChart
+  path: spec/values/endpoints/prometheus_openstack_exporter
+- kind: ArmadaChart
+  path: spec/values/endpoints/prometheus_rabbitmq_exporter
+- kind: ArmadaChart
+  path: spec/values/endpoints/shipyard
+- kind: ArmadaChart
+  path: spec/values/endpoints/volume
+- kind: ArmadaChart
+  path: spec/values/endpoints/volumev2
+- kind: ArmadaChart
+  path: spec/values/endpoints/volumev3
+- kind: ArmadaChart
+  path: spec/values/images
+- kind: ArmadaChart
+  path: spec/values/images/tags
+- kind: ArmadaChart
+  path: spec/values/network/auto_bridge_add/br-ex
+- kind: ArmadaChart
+  path: spec/values/network/cluster
+- kind: ArmadaChart
+  path: spec/values/network/drydock/node_port/port
+- kind: ArmadaChart
+  path: spec/values/network/gui/node_port/port
+- kind: ArmadaChart
+  path: spec/values/network/interface/tunnel
+- kind: ArmadaChart
+  path: spec/values/network/kubernetes_service_ip
+- kind: ArmadaChart
+  path: spec/values/network/pod_cidr
+- kind: ArmadaChart
+  path: spec/values/network/port/service_proxy
+- kind: ArmadaChart
+  path: spec/values/network/public
+- kind: ArmadaChart
+  path: spec/values/network/service_cidr
+- kind: ArmadaChart
+  path: spec/values/networking/podSubnet
+- kind: ArmadaChart
+  path: spec/values/nodes/_0_/name
+- kind: ArmadaChart
+  path: spec/values/nodes/_0_/tls/client/cert
+- kind: ArmadaChart
+  path: spec/values/nodes/_0_/tls/client/key
+- kind: ArmadaChart
+  path: spec/values/nodes/_0_/tls/peer/cert
+- kind: ArmadaChart
+  path: spec/values/nodes/_0_/tls/peer/key
+- kind: ArmadaChart
+  path: spec/values/nodes/_1_/name
+- kind: ArmadaChart
+  path: spec/values/nodes/_1_/tls/client/cert
+- kind: ArmadaChart
+  path: spec/values/nodes/_1_/tls/client/key
+- kind: ArmadaChart
+  path: spec/values/nodes/_1_/tls/peer/cert
+- kind: ArmadaChart
+  path: spec/values/nodes/_1_/tls/peer/key
+- kind: ArmadaChart
+  path: spec/values/nodes/_2_/name
+- kind: ArmadaChart
+  path: spec/values/nodes/_2_/tls/client/cert
+- kind: ArmadaChart
+  path: spec/values/nodes/_2_/tls/client/key
+- kind: ArmadaChart
+  path: spec/values/nodes/_2_/tls/peer/cert
+- kind: ArmadaChart
+  path: spec/values/nodes/_2_/tls/peer/key
+- kind: ArmadaChart
+  path: spec/values/secrets/anchor/tls/cert
+- kind: ArmadaChart
+  path: spec/values/secrets/anchor/tls/key
+- kind: ArmadaChart
+  path: spec/values/secrets/etcd/tls/ca
+- kind: ArmadaChart
+  path: spec/values/secrets/etcd/tls/cert
+- kind: ArmadaChart
+  path: spec/values/secrets/etcd/tls/key
+- kind: ArmadaChart
+  path: spec/values/secrets/maas_region/value
+- kind: ArmadaChart
+  path: spec/values/secrets/service_account/private_key
+- kind: ArmadaChart
+  path: spec/values/secrets/service_account/public_key
+- kind: ArmadaChart
+  path: spec/values/secrets/tls/ca
+- kind: ArmadaChart
+  path: spec/values/secrets/tls/cert
+- kind: ArmadaChart
+  path: spec/values/secrets/tls/client/ca
+- kind: ArmadaChart
+  path: spec/values/secrets/tls/key
+- kind: ArmadaChart
+  path: spec/values/secrets/tls/peer/ca
+- kind: ArmadaChart
+  path: spec/values/service/ip
