--- a/deckhand-poc-ascrd/base/kustomizeconfig/DrydockBootAction.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/DrydockBootAction.yaml
@@ -1,3 +1,9 @@
 varReference:
-- path: spec
-  kind: DrydockBootAction
+- kind: DrydockBootAction
+  path: spec/assets/_0_/data
+- kind: DrydockBootAction
+  path: spec/assets/_0_/path
+- kind: DrydockBootAction
+  path: spec/assets/_1_/data
+- kind: DrydockBootAction
+  path: spec/assets/_1_/path
