--- a/deckhand-poc-ascrd/base/kustomizeconfig/DrydockRegion.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/DrydockRegion.yaml
@@ -1,3 +1,5 @@
 varReference:
-- path: spec
-  kind: DrydockRegion
+- kind: DrydockRegion
+  path: spec/authorized_keys/_0_
+- kind: DrydockRegion
+  path: spec/repositories/main_archive
