--- a/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeKubelet.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeKubelet.yaml
@@ -1,3 +1,5 @@
 varReference:
-- path: spec
-  kind: PromenadeKubelet
+- kind: PromenadeKubelet
+  path: spec/arguments/_9_
+- kind: PromenadeKubelet
+  path: spec/images/pause
