--- a/deckhand-poc-ascrd/base/kustomizeconfig/PeglegEndpointCatalogue.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/PeglegEndpointCatalogue.yaml
@@ -1,3 +1,3 @@
 varReference:
-- path: spec
-  kind: PeglegEndpointCatalogue
+- kind: PeglegEndpointCatalogue
+  path: spec/osh_infra/ldap/path/default
