--- a/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeGenesis.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeGenesis.yaml
@@ -1,3 +1,21 @@
 varReference:
-- path: spec
-  kind: PromenadeGenesis
+- kind: PromenadeGenesis
+  path: spec/apiserver/command_prefix/_1_
+- kind: PromenadeGenesis
+  path: spec/apiserver/command_prefix/_2_
+- kind: PromenadeGenesis
+  path: spec/hostname
+- kind: PromenadeGenesis
+  path: spec/images/armada
+- kind: PromenadeGenesis
+  path: spec/images/helm/tiller
+- kind: PromenadeGenesis
+  path: spec/images/kubernetes/apiserver
+- kind: PromenadeGenesis
+  path: spec/images/kubernetes/controller-manager
+- kind: PromenadeGenesis
+  path: spec/images/kubernetes/etcd
+- kind: PromenadeGenesis
+  path: spec/images/kubernetes/scheduler
+- kind: PromenadeGenesis
+  path: spec/ip
