--- a/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeHostSystem.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeHostSystem.yaml
@@ -1,3 +1,19 @@
 varReference:
-- path: spec
-  kind: PromenadeHostSystem
+- kind: PromenadeHostSystem
+  path: spec/files/_0_/tar_url
+- kind: PromenadeHostSystem
+  path: spec/files/_2_/content
+- kind: PromenadeHostSystem
+  path: spec/images/coredns
+- kind: PromenadeHostSystem
+  path: spec/images/haproxy
+- kind: PromenadeHostSystem
+  path: spec/images/helm/helm
+- kind: PromenadeHostSystem
+  path: spec/images/kubernetes/kubectl
+- kind: PromenadeHostSystem
+  path: spec/packages/additional
+- kind: PromenadeHostSystem
+  path: spec/packages/required/docker
+- kind: PromenadeHostSystem
+  path: spec/packages/required/socat
