--- a/deckhand-poc-ascrd/replacement/kustomization.yaml
+++ b/deckhand-poc-ascrd/replacement/kustomization.yaml
@@ -17,21 +17,21 @@ commonLabels:
   deckhand-poc-label: replacement
 
 vars:
-- name: THE_CERTIFICATE
+- name: DeckhandCertificate.example-cert.spec
   objref:
     kind: DeckhandCertificate
     name: example-cert
     apiVersion: deckhand.airshipit.org/v1alpha1
   fieldref:
     fieldpath: spec
-- name: THE_CERTIFICATE_KEY
+- name: DeckhandCertificateKey.example-key.spec
   objref:
     kind: DeckhandCertificateKey
     name: example-key
     apiVersion: deckhand.airshipit.org/v1alpha1
   fieldref:
     fieldpath: spec
-- name: INSERT_PASSWORD_HERE
+- name: DeckhandPassphrase.example-password.spec
   objref:
     kind: DeckhandPassphrase
     name: example-password
