Fix merge issue

--- a/deckhand-poc-ascrd/base/kustomizeconfig/ArmadaChartGroup.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/ArmadaChartGroup.yaml
@@ -1,9 +1,5 @@
 nameReference:
-- kind: ArmadaChart
-  fieldSpecs:
-  - path: spec/chart_group[0]
-    kind: ArmadaChartGroup
 
 varReference:
-- path: spec
-  kind: ArmadaChartGroup
+
+inlineReference:
