--- a/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeGenesis.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeGenesis.yaml
@@ -1,9 +1,5 @@
 varReference:
 - kind: PromenadeGenesis
-  path: spec/apiserver/command_prefix/_1_
-- kind: PromenadeGenesis
-  path: spec/apiserver/command_prefix/_2_
-- kind: PromenadeGenesis
   path: spec/hostname
 - kind: PromenadeGenesis
   path: spec/images/armada
@@ -19,3 +15,9 @@ varReference:
   path: spec/images/kubernetes/scheduler
 - kind: PromenadeGenesis
   path: spec/ip
+
+inlineReference:
+# - kind: PromenadeGenesis
+#   path: spec/apiserver/command_prefix/_1_
+# - kind: PromenadeGenesis
+#   path: spec/apiserver/command_prefix/_2_
