--- a/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeKubelet.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/PromenadeKubelet.yaml
@@ -1,5 +1,7 @@
 varReference:
 - kind: PromenadeKubelet
-  path: spec/arguments/_9_
-- kind: PromenadeKubelet
   path: spec/images/pause
+
+inlineReference:
+# - kind: PromenadeKubelet
+#  path: spec/arguments/_9_
