--- a/deckhand-poc-ascrd/base/kustomizeconfig/DrydockRegion.yaml
+++ b/deckhand-poc-ascrd/base/kustomizeconfig/DrydockRegion.yaml
@@ -1,5 +1,7 @@
 varReference:
 - kind: DrydockRegion
-  path: spec/authorized_keys/_0_
-- kind: DrydockRegion
   path: spec/repositories/main_archive
+- kind: DrydockRegion
+  path: spec/authorized_keys/_0_
+
+inlineReference:
