Leverage progress made with parent-inlining

--- a/deckhand-poc-ascrd/airship/kustomization.yaml
+++ b/deckhand-poc-ascrd/airship/kustomization.yaml
@@ -9,6 +9,10 @@ resources:
 # - airship-novars.yaml
 - airship.yaml
 
+# Attempt to solve inlining using patches
+# patchesStrategicMerge:
+# - order-boggus.yaml
+
 # namePrefix: pref1-
 
 # namespace: airship
