--- a/deckhand-poc-ascrd/base/crds/ArmadaChart.yaml
+++ b/deckhand-poc-ascrd/base/crds/ArmadaChart.yaml
@@ -218,12 +218,11 @@ spec:
                   format: int64
                   type: integer
               type: object
-          # JEB: To Fix
-          # required:
-          # - namespace
-          # - release
-          # - source
-          # - dependencies
+          required:
+          - namespace
+          - release
+          - source
+          - dependencies
           type: object
         status:
           properties:
