--- a/deckhand-poc-ascrd/base/crds/PromenadeGenesis.yaml
+++ b/deckhand-poc-ascrd/base/crds/PromenadeGenesis.yaml
@@ -208,11 +208,11 @@ spec:
                 - kubernetes
               # additionalProperties: false
         
-          #JEB required:
-          #JEB   - hostname
-          #JEB   - ip
-          #JEB   - images
-          #JEB   - labels
+          required:
+            - hostname
+            - ip
+            - images
+            - labels
           # additionalProperties: false
 status:
   acceptedNames:
