--- a/deckhand-poc-ascrd/base/crds/PromenadeKubernetesNetwork.yaml
+++ b/deckhand-poc-ascrd/base/crds/PromenadeKubernetesNetwork.yaml
@@ -83,9 +83,9 @@ spec:
                     # $ref: '#/definitions/ip_address'
                     type: string
                     format: ipv4
-              #JEB required:
-              #JEB   - cluster_domain
-              #JEB   - service_ip
+              required:
+                - cluster_domain
+                - service_ip
               # additionalProperties: false
         
             etcd:
@@ -165,9 +165,9 @@ spec:
                 - url
               # additionalProperties: false
         
-          #JEB required:
-          #JEB   - dns
-          #JEB   - kubernetes
+          required:
+            - dns
+            - kubernetes
           # additionalProperties: false
 status:
   acceptedNames:
