--- a/deckhand-poc-ascrd/base/cluster/cluster_role.yaml
+++ b/deckhand-poc-ascrd/base/cluster/cluster_role.yaml
@@ -20,3 +20,9 @@ rules:
   - storageclasses
   verbs:
   - '*'
+- apiGroups:
+  - extensions
+  resources:
+  - podsecuritypolicies
+  verbs:
+  - '*'
